@@ -1,3 +1,7 @@
+2014-10-02 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Iniziato lo sviluppo sul widget della tabella per mostrare le varie attività.
+
 2014-10-01 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Continua lo sviluppo dell'add delle attivitità.
